Default capsule type settings

--- a/Pod/Info.plist
+++ b/Pod/Info.plist
@@ -27,7 +27,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>To scan a barcode, you give Pod permission to use the camera.</string>
+	<string>To scan a barcode, you must give Pod permission to use the camera.</string>
 	<key>NSHealthShareUsageDescription</key>
 	<string>To log caffeine to the Health app, you must allow Pod access to HealthKit.</string>
 	<key>NSHealthUpdateUsageDescription</key>
